# sentiment_analyzer

./: LICENSE  README.md  pyproject.toml
sentiment_analysis/: main.py
sentiment_analysis/adapters/: __init__.py  interfaces.py  transformers.py
sentiment_analysis/app/: __init__.py  services.py
sentiment_analysis/controllers/: sentiment.py
sentiment_analysis/domain/: __init__.py
sentiment_analysis/infrastructure/: __init__.py  dependency_injection.py
